finished basic exercises

--- a/Carmen/basic.html
+++ b/Carmen/basic.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=S, initial-scale=1.0">
-    <title>Document</title>
+   
+    <title>Basic1</title>
 </head>
 <body>
     
+
+
+<script src="basic.js"></script>   
+
 </body>
 </html>
