added empty divs to HTML

--- a/Catalin/index.html
+++ b/Catalin/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     
+          <div id="wrapper1"></div>
+          <div id ="wrapper2"></div>
 
 
 	<script src="script.json"></script>
