--- a/Catalin/index.html
+++ b/Catalin/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Date Me</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item active h4">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item active h4">
                     <a class="nav-link" href="#">Settings</a>
