wrong js file name

--- a/Catalin/index.html
+++ b/Catalin/index.html
@@ -46,6 +46,6 @@
 
 
 	<script src="script.json"></script>
-    <script src="myscript1.js"></script>   
+    <script src="myscript.js"></script>   
 </body>
 </html>
